# rust-fullstack-skeleton

./: Cargo.toml
backend/src/: lib.rs
base64totext-backend/: Cargo.toml
base64totext-backend/public/: base64totext-frontend-566f837984fd8b6d.js  base64totext-frontend-566f837984fd8b6d_bg.wasm  base64totext-frontend-ccc019b726f88741.js  base64totext-frontend-ccc019b726f88741_bg.wasm  index.html
base64totext-backend/src/: lib.rs
base64totext-frontend/: Cargo.toml  Trunk.toml  index.html
base64totext-frontend/src/: app.css  home.rs  inline-scss.scss  login.rs  main.rs
