[package]
name = "base64totext-backend"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
axum = "0.6.4"
tokio = { version = "1.22.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["full"] }
shuttle-service = { version = "0.9.0", features = ["web-axum"] }
shuttle-static-folder = "0.9.0"
sync_wrapper = "0.1.1"
utoipa = {version = "3", features = ["axum_extras"] }
utoipa-swagger-ui = {version = "3", features = ["axum"] }
